--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.2.3",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.8",
     "formik": "^2.4.5",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "redux-persist": "^6.0.0",
     "sonner": "^1.4.41",
     "yup": "^1.4.0"
   },
