--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.3",
     "@types/js-cookie": "^3.0.6",
@@ -26,6 +23,7 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
     "sonner": "^1.4.41",
     "yup": "^1.4.0"
