--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.8",
     "cloudinary-react": "^1.8.1",
+    "emoji-picker-react": "^4.9.2",
     "flowbite": "^2.3.0",
     "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
@@ -25,7 +26,9 @@
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.5",
     "sonner": "^1.4.41",
+    "timeago.js": "^4.0.0-beta.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
