Flights and Hotel search done

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@stripe/stripe-js": "^3.3.0",
     "@types/js-cookie": "^3.0.6",
+    "@zegocloud/zego-uikit-prebuilt": "^2.2.1",
     "axios": "^1.6.8",
     "cloudinary-react": "^1.8.1",
     "emoji-picker-react": "^4.9.2",
