Video call initiated

--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "socket.io-client": "^4.7.5",
     "sonner": "^1.4.41",
     "timeago.js": "^4.0.0-beta.3",
+    "uuid": "^9.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.8",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
