--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^3.3.0",
     "@types/js-cookie": "^3.0.6",
     "@zegocloud/zego-uikit-prebuilt": "^2.2.1",
+    "apexcharts": "^3.49.1",
     "axios": "^1.6.8",
     "cloudinary-react": "^1.8.1",
     "emoji-picker-react": "^4.9.2",
@@ -22,6 +23,7 @@
     "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.0",
